Added a new Message type for hop counting.

--- a/Epidemic_Broadcast/Makefile
+++ b/Epidemic_Broadcast/Makefile
@@ -30,10 +30,11 @@ PROJECTRELATIVE_PATH =
 O = $(PROJECT_OUTPUT_DIR)/$(CONFIGNAME)/$(PROJECTRELATIVE_PATH)
 
 # Object files for local .cc, .msg and .sm files
-OBJS = $O/node.o
+OBJS = $O/node.o $O/broadcastMessage_m.o
 
 # Message files
-MSGFILES =
+MSGFILES = \
+    broadcastMessage.msg
 
 # SM files
 SMFILES =
