--- a/Epidemic_Broadcast/Makefile
+++ b/Epidemic_Broadcast/Makefile
@@ -30,7 +30,7 @@ PROJECTRELATIVE_PATH =
 O = $(PROJECT_OUTPUT_DIR)/$(CONFIGNAME)/$(PROJECTRELATIVE_PATH)
 
 # Object files for local .cc, .msg and .sm files
-OBJS = $O/Node.o
+OBJS = $O/Node.o $O/backup/Node.o
 
 # Message files
 MSGFILES =
