Implemented signal for information gathering.

--- a/Epidemic_Broadcast/omnetpp.ini
+++ b/Epidemic_Broadcast/omnetpp.ini
@@ -3,15 +3,19 @@ network = Floor
 
 [Config Test]
 
-Floor.sizeX = 500
-Floor.sizeY = 350
+Floor.sizeX = ${200, 1000}
+Floor.sizeY = ${200, 1000}
 
-Floor.P = 1
-
-Floor.PosX = uniform(0,500)
-Floor.PosY = uniform(0,300)
-
-Floor.numberOfNodes = 10
-Floor.radius = 100
 
 Floor.slotTime = 100ms
+Floor.radius = ${20, 120}
+Floor.PosX = intuniform(0,Floor.sizeX)
+Floor.PosY = intuniform(0,Floor.sizeY)
+
+
+Floor.P = ${0.1, 0.9}
+
+Floor.numberOfNodes = ${20, 500}
+
+repeat = 30
+seed-set = ${3, 5}
