--- a/Epidemic_Broadcast/Makefile
+++ b/Epidemic_Broadcast/Makefile
@@ -1,12 +1,12 @@
 #
-# OMNeT++/OMNEST Makefile for Epidemic_Broadcast_1
+# OMNeT++/OMNEST Makefile for Epidemic_Broadcast
 #
 # This file was generated with the command:
 #  opp_makemake -f --deep -O out -I.
 #
 
 # Name of target to be created (-o option)
-TARGET = Epidemic_Broadcast_1$(D)$(EXE_SUFFIX)
+TARGET = Epidemic_Broadcast$(D)$(EXE_SUFFIX)
 TARGET_DIR = .
 
 # User interface (uncomment one) (-u option)
