--- a/Epidemic_Broadcast/.cproject
+++ b/Epidemic_Broadcast/.cproject
@@ -204,5 +204,21 @@
     <storageModule moduleId="org.eclipse.cdt.core.LanguageSettingsProviders"/>
     	
     <storageModule moduleId="org.eclipse.cdt.make.core.buildtargets"/>
+    	
+    <storageModule moduleId="refreshScope" versionNumber="2">
+        		
+        <configuration configurationName="debug">
+            			
+            <resource resourceType="PROJECT" workspacePath="/Epidemic_Broadcast"/>
+            		
+        </configuration>
+        		
+        <configuration configurationName="release">
+            			
+            <resource resourceType="PROJECT" workspacePath="/Epidemic_Broadcast"/>
+            		
+        </configuration>
+        	
+    </storageModule>
     
 </cproject>
