--- a/Epidemic_Broadcast/omnetpp.ini
+++ b/Epidemic_Broadcast/omnetpp.ini
@@ -3,19 +3,66 @@ network = Floor
 
 [Config Test]
 
-Floor.sizeX = ${200, 1000}
-Floor.sizeY = ${200, 1000}
+Floor.sizeX = ${X=200, 1000}
+Floor.sizeY = ${Y=200, 1000}
 
 
 Floor.slotTime = 100ms
 Floor.radius = ${20, 120}
-Floor.PosX = intuniform(0,Floor.sizeX)
-Floor.PosY = intuniform(0,Floor.sizeY)
+Floor.PosX = intuniform(0,${X})
+Floor.PosY = intuniform(0,${Y})
 
 
 Floor.P = ${0.1, 0.9}
 
 Floor.numberOfNodes = ${20, 500}
 
+
+# in this way we have 30 repetion and the seed set change seeds in base of the number of the 
+# repetition
+
+num-rngs = 2
+Floor.PosX.rng-0 = 1
+Floor.PosY.rng-0 = 2
 repeat = 30
-seed-set = ${3, 5}
+seed-set = ${repetition}
+#####################################################
+
+
+[Config Test1]
+
+Floor.sizeX = ${X=500}
+Floor.sizeY = ${Y=350}
+
+
+Floor.slotTime = 100ms
+Floor.radius = 75
+Floor.PosX = intuniform(0,${X})
+Floor.PosY = intuniform(0,${Y})
+
+
+Floor.P = 0.6
+
+Floor.numberOfNodes = 120
+
+repeat = 3
+
+
+[Config calibration]
+
+Floor.sizeX = ${X=500}
+Floor.sizeY = ${Y=350}
+
+
+Floor.slotTime = 100ms
+Floor.radius = 75
+Floor.PosX = intuniform(0,${X})
+Floor.PosY = intuniform(0,${Y})
+
+
+Floor.P = 0.6
+
+Floor.numberOfNodes = 30  
+
+repeat = 30
+
