Revision, correction, and expansion of the simulator.

--- a/Epidemic_Broadcast/omnetpp.ini
+++ b/Epidemic_Broadcast/omnetpp.ini
@@ -1,68 +1,49 @@
+#
+# HOW TO INIZIALIZE THE Floor.selectionCriterionStarterNode PARAMETER:
+# 0 = random starter node
+# 1 = starter node near the center
+# 2 = starter node near a vertex
+# 3 = starter node near a top-left vertex
+#
+
 [General]
 network = Floor
+Floor.slotTime = 100ms
+num-rngs = 3
+Floor.node[*].rng-0 = 0
+Floor.rng-0 = 1
+Floor.rng-1 = 2
+repeat = 3
+seed-set = ${repetition}
+
 
 [Config Test]
-
-Floor.sizeX = ${X=200, 1000}
-Floor.sizeY = ${Y=200, 1000}
-
-
-Floor.slotTime = 100ms
-Floor.radius = ${20, 120}
-Floor.PosX = intuniform(0,${X})
-Floor.PosY = intuniform(0,${Y})
-
-
-Floor.P = ${0.1, 0.9}
-
-Floor.numberOfNodes = ${20, 500}
-
-
-# in this way we have 30 repetion and the seed set change seeds in base of the number of the 
-# repetition
-
-num-rngs = 2
-Floor.PosX.rng-0 = 1
-Floor.PosY.rng-0 = 2
-repeat = 30
-seed-set = ${repetition}
-#####################################################
+Floor.sizeX = ${X=200}
+Floor.sizeY = ${Y=200}
+Floor.radius = ${20}
+Floor.PosX = uniform(0,${X})
+Floor.PosY = uniform(0,${Y})
+Floor.P = ${0.1}
+Floor.numberOfNodes = ${N=20}
 
 
 [Config Test1]
-
-Floor.sizeX = ${X=500}
-Floor.sizeY = ${Y=350}
-
-
+Floor.sizeX = ${X=40}
+Floor.sizeY = ${Y=6}
+Floor.selectionCriterionStarterNode=3
 Floor.slotTime = 100ms
-Floor.radius = 75
-Floor.PosX = intuniform(0,${X})
-Floor.PosY = intuniform(0,${Y})
-
-
-Floor.P = 0.6
-
-Floor.numberOfNodes = 120
-
-repeat = 3
+Floor.radius = 14
+Floor.PosX = uniform(0,${X})
+Floor.PosY = uniform(0,${Y})
+Floor.P = 0.1
+Floor.numberOfNodes = 4
 
 
 [Config calibration]
-
 Floor.sizeX = ${X=500}
 Floor.sizeY = ${Y=350}
-
-
-Floor.slotTime = 100ms
 Floor.radius = 75
 Floor.PosX = intuniform(0,${X})
 Floor.PosY = intuniform(0,${Y})
-
-
 Floor.P = 0.6
-
 Floor.numberOfNodes = 30  
-
-repeat = 30
-
