--- a/Epidemic_Broadcast/.qtenvrc
+++ b/Epidemic_Broadcast/.qtenvrc
@@ -1,6 +1,6 @@
 [General]
-last-configname=Test
-last-runnumber=0
+last-configname=Test1
+last-runnumber=2
 
 [RunModeProfiles]
 fast-max-animation-speed=nan
