Fixed bug that distorted the slot time count signals.

--- a/Epidemic_Broadcast/omnetpp.ini
+++ b/Epidemic_Broadcast/omnetpp.ini
@@ -42,8 +42,9 @@ Floor.numberOfNodes = 4
 [Config calibration]
 Floor.sizeX = ${X=500}
 Floor.sizeY = ${Y=350}
-Floor.radius = 75
-Floor.PosX = intuniform(0,${X})
-Floor.PosY = intuniform(0,${Y})
+Floor.radius = 90
+Floor.PosX = uniform(0,${X})
+Floor.PosY = uniform(0,${Y})
 Floor.P = 0.6
-Floor.numberOfNodes = 30  
+Floor.numberOfNodes = 70  
+Floor.selectionCriterionStarterNode=0
