--- a/Epidemic_Broadcast/.qtenvrc
+++ b/Epidemic_Broadcast/.qtenvrc
@@ -1,6 +1,6 @@
 [General]
-last-configname=Test1
-last-runnumber=2
+last-configname=calibration
+last-runnumber=0
 
 [RunModeProfiles]
 fast-max-animation-speed=nan
@@ -12,4 +12,4 @@ run-max-animation-speed=nan
 run-max-playback-speed=100
 run-min-animation-speed=nan
 run-min-playback-speed=0.01
-run-playback-speed=1
+run-playback-speed=100
