Changed output signals.

--- a/Epidemic_Broadcast/omnetpp.ini
+++ b/Epidemic_Broadcast/omnetpp.ini
@@ -13,16 +13,17 @@ num-rngs = 3
 Floor.node[*].rng-0 = 0
 Floor.rng-0 = 1
 Floor.rng-1 = 2
-repeat = 3
+repeat = 100
 seed-set = ${repetition}
+Floor.detectionCollisionStat.result-recording-modes = -stats
 
 
 [Config Test]
 Floor.sizeX = ${X=200}
 Floor.sizeY = ${Y=200}
 Floor.radius = ${20}
-Floor.PosX = uniform(0,${X})
-Floor.PosY = uniform(0,${Y})
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
 Floor.P = ${0.1}
 Floor.numberOfNodes = ${N=20}
 
@@ -45,6 +46,57 @@ Floor.sizeY = ${Y=350}
 Floor.radius = 90
 Floor.PosX = uniform(0,${X})
 Floor.PosY = uniform(0,${Y})
-Floor.P = 0.6
-Floor.numberOfNodes = 70  
+Floor.P = ${ProbRetr=0.3, 0.6}
+Floor.numberOfNodes = ${NumNod=70}  
 Floor.selectionCriterionStarterNode=0
+repeat=20
+
+[Config PrimoTestUfficiale]
+Floor.sizeX = ${X=500}
+Floor.sizeY = ${Y=250}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${0.05}
+Floor.numberOfNodes = ${100, 150, 200, 250, 300, 350, 400, 450, 500}  
+Floor.selectionCriterionStarterNode=1
+
+[Config SecondoTest]
+Floor.sizeX = ${X=500}
+Floor.sizeY = ${Y=250}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${0.05}
+Floor.numberOfNodes = ${275,325}  
+Floor.selectionCriterionStarterNode=1
+
+[Config TerzoTest]
+Floor.sizeX = ${X=500}
+Floor.sizeY = ${Y=250}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${0.05}
+Floor.numberOfNodes = ${290, 310, 318, 335, 550, 600, 650, 700, 750, 800, 850, 900, 950, 1000}  
+Floor.selectionCriterionStarterNode=1
+
+[Config QuintoTest]
+Floor.sizeX = ${X=707}
+Floor.sizeY = ${Y=353}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${0.05}
+Floor.numberOfNodes = ${500, 550, 600, 650, 700, 750, 800}  
+Floor.selectionCriterionStarterNode=1
+
+[Config SestoTest]
+Floor.sizeX = ${X=250}
+Floor.sizeY = ${Y=125}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${ProbRetr=0.05}
+Floor.numberOfNodes = ${NumNode=25..300 step 25}  
+Floor.selectionCriterionStarterNode=1
