Added i-quantile of broadcast-time signal.

--- a/Epidemic_Broadcast/omnetpp.ini
+++ b/Epidemic_Broadcast/omnetpp.ini
@@ -16,6 +16,7 @@ Floor.rng-1 = 2
 repeat = 100
 seed-set = ${repetition}
 Floor.detectionCollisionStat.result-recording-modes = -stats
+Floor.quantileBT = 0.9 
 
 
 [Config Test]
@@ -99,4 +100,24 @@ Floor.PosX = uniform(0,${X},0)
 Floor.PosY = uniform(0,${Y},1)
 Floor.P = ${ProbRetr=0.05}
 Floor.numberOfNodes = ${NumNode=25..300 step 25}  
+Floor.selectionCriterionStarterNode=1
+
+[Config OttavoTest]
+Floor.sizeX = ${X=250}
+Floor.sizeY = ${Y=125}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${ProbRetr=0.4, 0.9}
+Floor.numberOfNodes = ${NumNode=125, 250}  
+Floor.selectionCriterionStarterNode=1
+
+[Config NonoTest]
+Floor.sizeX = ${X=250}
+Floor.sizeY = ${Y=125}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${ProbRetr=0.2, 0.6}
+Floor.numberOfNodes = ${NumNode=400, 600}  
 Floor.selectionCriterionStarterNode=1
