Adding histograms signals.

--- a/Epidemic_Broadcast/omnetpp.ini
+++ b/Epidemic_Broadcast/omnetpp.ini
@@ -16,6 +16,7 @@ Floor.rng-1 = 2
 repeat = 100
 seed-set = ${repetition}
 Floor.detectionCollisionStat.result-recording-modes = -stats
+Floor.hopCountStat.result-recording-modes = -vector
 Floor.quantileBT = 0.9 
 
 
@@ -121,3 +122,35 @@ Floor.PosY = uniform(0,${Y},1)
 Floor.P = ${ProbRetr=0.2, 0.6}
 Floor.numberOfNodes = ${NumNode=400, 600}  
 Floor.selectionCriterionStarterNode=1
+
+[Config DecimoTest]
+Floor.sizeX = ${X=250}
+Floor.sizeY = ${Y=125}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${ProbRetr=0.1, 0.2, 0.4, 0.6, 0.8, 1}
+Floor.numberOfNodes = ${NumNode=50, 100..500 step 100}  
+Floor.selectionCriterionStarterNode=1
+
+[Config TestProvaVecEIstogram]
+Floor.sizeX = ${X=250}
+Floor.sizeY = ${Y=125}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${ProbRetr=0.6, 1}
+Floor.numberOfNodes = ${NumNode=200, 300}  
+Floor.selectionCriterionStarterNode=1
+repeat=3
+
+[Config provaIstogramHopCount]
+Floor.sizeX = ${X=250}
+Floor.sizeY = ${Y=125}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${ProbRetr=1}
+Floor.numberOfNodes = ${NumNode=200}  
+Floor.selectionCriterionStarterNode=1
+repeat=1
