Adding area and shape parameters.

--- a/Epidemic_Broadcast/omnetpp.ini
+++ b/Epidemic_Broadcast/omnetpp.ini
@@ -6,6 +6,7 @@
 # 3 = starter node near a top-left vertex
 #
 
+
 [General]
 network = Floor
 Floor.slotTime = 100ms
@@ -18,7 +19,6 @@ seed-set = ${repetition}
 Floor.detectionCollisionStat.result-recording-modes = -stats
 Floor.hopCountStat.result-recording-modes = -vector
 Floor.quantileBT = 0.9 
-
 
 [Config Test]
 Floor.sizeX = ${X=200}
@@ -154,3 +154,15 @@ Floor.P = ${ProbRetr=1}
 Floor.numberOfNodes = ${NumNode=200}  
 Floor.selectionCriterionStarterNode=2
 repeat=1
+
+[Config variazForma]
+Floor.area = ${A= 31250}
+Floor.XoverY = ${r= 1..9 step 1}
+Floor.sizeY = ${Y=sqrt(${A}/${r})}
+Floor.sizeX = ${X=(${Y}*${r})}
+Floor.radius = 30
+Floor.PosX = uniform(0,${X},0)
+Floor.PosY = uniform(0,${Y},1)
+Floor.P = ${ProbRetr=0.1, 0.2}
+Floor.numberOfNodes = ${NumNode= 150}  
+Floor.selectionCriterionStarterNode=1
